re PR c++/10611 (operations on vector mode not recognized in C++)

PR c++/10611
	* cp/cvt.c (build_expr_type_conversion): Same.
	* cp/typeck.c (build_binary_op): Handle vectors.
	(common_type): Same.
	(type_after_usual_arithmetic_conversions): Same.
	* testsuite/g++.dg/conversion/simd2.C: New.

From-SVN: r100834